# aixcc-asc-atlantis

./: README.md  compose.yaml  compose_local_overrides.yaml  kompose_competition_overrides.yaml  kompose_development_overrides.yaml
cp_config/: cp_config.yaml
crs/: .gitignore
crs/src/crs-cp-user/libafl_libfuzzer/: .gitignore  Cargo.toml  README.md  build-cp.sh  build-libaflcc.sh  harness.c
crs/src/crs-cp-user/libafl_libfuzzer/src/: lib.rs
crs/src/crs-cp-user/testlang_fuzz/: Cargo.toml
crs/src/crs-cp-user/testlang_fuzz/src/: lib.rs
crs/src/crs-cp-user/testlang_fuzz/src/generators/: mod.rs  testlang_generator.rs
crs/src/crs-cp-user/testlang_fuzz/src/mutators/: mod.rs  testlang_mutator.rs
crs/src/crs-cp-user/testlang_fuzz/src/parser/: mod.rs  parser.py
crs/src/crs-cp-user/testlang_fuzz/src/test_grammars/: program.c  program.testlang
crs/src/crs-cp-user/testlang_fuzz/src/testlangs/: CVE-2022-0185-ext.txt  CVE-2022-32250-2.txt  KPRCA-00001.txt  NRFIN-00001.txt  userspace-1.txt
crs/src/crs-patch/loop/: .dockerignore  .gitignore  README.md  pyproject.toml
crs/src/crs-patch/loop/apps/infilling/: app.py  benchmark.py
crs/src/crs-patch/loop/apps/infilling/reports/00000/: infilling-linux-CADET-00001-2-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CADET-00001-2-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CADET-00001-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CADET-00001-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CROMU-00001-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CROMU-00001-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CROMU-00003-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CROMU-00003-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CROMU-00004-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CROMU-00004-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CROMU-00005-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CROMU-00005-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CVE-2021-38208-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CVE-2021-38208-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CVE-2022-0185-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CVE-2022-0185-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CVE-2022-0995-2-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CVE-2022-0995-2-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CVE-2022-0995-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CVE-2022-0995-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CVE-2022-32250-2-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CVE-2022-32250-2-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CVE-2022-32250-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CVE-2022-32250-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-CVE-2023-2513-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-CVE-2023-2513-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-KPRCA-00001-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-KPRCA-00001-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-NRFIN-00001-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-NRFIN-00001-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-NRFIN-00003-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-NRFIN-00003-gpt-4o-1-00001-wrong-patch.diff  infilling-linux-linux_test_harness-gpt-4o-1-00000-wrong-patch.diff  infilling-linux-linux_test_harness-gpt-4o-1-00001-wrong-patch.diff
crs/src/crs-patch/loop/apps/redia_baseline/: app.py  benchmark.py
crs/src/crs-patch/loop/dependencies/redia/: README.md  pyproject.toml
crs/src/crs-patch/loop/dependencies/redia/redia/code/: contexts.py  exceptions.py  functions.py  hooks.py  models.py  recipes.py
crs/src/crs-patch/loop/dependencies/redia/redia/conversation/: contexts.py  functions.py
crs/src/crs-patch/loop/dependencies/redia/redia/repository_map/: functions.py  models.py
crs/src/crs-patch/loop/dependencies/redia/redia/summary/: contexts.py  functions.py
crs/src/crs-patch/loop/detections/: cp-jenkins-harness-id-1.toml  cp-jenkins-harness-id-12.toml  cp-jenkins-harness-id-2.toml  cp-jenkins-harness-id-3.toml  cp-jenkins-harness-id-4.toml  cp-jenkins-harness-id-6.toml  cp-jenkins-harness-id-7.toml  cp-linux-exemplar-CADET-00001.toml  cp-linux-exemplar-CROMU-00003.toml  cp-linux-exemplar-CROMU-00004.toml  cp-linux-exemplar-CVE-2022-0185.toml  cp-linux-exemplar-CVE-2022-0995.toml  cp-linux-exemplar-CVE-2022-32250-2.toml  cp-linux-exemplar-CVE-2022-32250.toml  cp-linux-exemplar-KPRCA-00001.toml  cp-linux-exemplar-linux_test_harness.toml  mock-cp-cpv-1.toml  mock-cp-cpv-2.toml
crs/src/crs-patch/loop/docs/: loop-figure-pipeline.ai  proposal.md
crs/src/crs-patch/loop/loop/commons/fp/: functions.py
crs/src/crs-patch/loop/loop/commons/interaction/: exceptions.py  functions.py
crs/src/crs-patch/loop/loop/commons/logging/: context_manager.py  hooks.py
crs/src/crs-patch/loop/loop/framework/action/: models.py  variants.py
crs/src/crs-patch/loop/loop/framework/agent/: protocols.py
crs/src/crs-patch/loop/loop/framework/benchmark/: functions.py  hooks.py
crs/src/crs-patch/loop/loop/framework/challenge_project/: models.py
crs/src/crs-patch/loop/loop/framework/circuit/: models.py
crs/src/crs-patch/loop/loop/framework/detection/: functions.py  models.py
crs/src/crs-patch/loop/loop/framework/effect/: models.py  variants.py
crs/src/crs-patch/loop/loop/framework/environment/: exceptions.py  protocols.py
crs/src/crs-patch/loop/loop/framework/evaluator/: protocols.py
crs/src/crs-patch/loop/loop/framework/lite_llm/: contexts.py
crs/src/crs-patch/loop/loop/framework/location/: models.py
crs/src/crs-patch/loop/loop/framework/picker/: protocols.py
crs/src/crs-patch/loop/loop/framework/seed/: models.py  variants.py
crs/src/crs-patch/loop/loop/framework/wire/: context.py  models.py
crs/src/crs-patch/loop/loop/services/agents/: infilling.py  redia.py
crs/src/crs-patch/loop/loop/services/environments/: default.py
crs/src/crs-patch/loop/loop/services/evaluators/: acc.py
crs/src/crs-patch/loop/loop/services/pickers/: redia.py
crs/src/crs-patch/loop/tests/test_data/: CROMU-00001.toml  cp-jenkins-harness-id-1.toml
(+4258 files in other folders)
