java_library(
    name = "combinator",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        ":protobuf_runtime_compile_only",
        "//src/main/java/com/code_intelligence/jazzer/mutation/api",
        "//src/main/java/com/code_intelligence/jazzer/mutation/support",
        "//src/main/java/com/code_intelligence/jazzer/mutation/fieldsemantic",
        "@com_github_jhalterman_typetools//:typetools",
        "@com_google_errorprone_error_prone_type_annotations//jar",
    ],
)

java_library(
    name = "protobuf_runtime_compile_only",
    # The proto mutator factory detects the presence of Protobuf at runtime and disables itself if
    # it isn't found. Without something else bringing in the Protobuf runtime, there is no point in
    # supporting proto mutations.
    neverlink = True,
    visibility = [
        "//src/main/java/com/code_intelligence/jazzer/mutation/combinator:__pkg__",
    ],
    exports = [
        "@com_google_protobuf_protobuf_java//jar",
    ],
)
